updated gradle files to 1.9 and higher (until next major version change)

--- a/build.gradle
+++ b/build.gradle
@@ -1,120 +1,82 @@
-evaluationDependsOn(':version')
 
+// For those who want the bleeding edge
 buildscript {
     repositories {
-        mavenCentral()
+        jcenter()
         maven {
             name = "forge"
             url = "http://files.minecraftforge.net/maven"
         }
-        maven {
-            name = "sonatype"
-            url = "https://oss.sonatype.org/content/repositories/snapshots/"
-        }
     }
     dependencies {
-        classpath 'net.minecraftforge.gradle:ForgeGradle:1.2-SNAPSHOT'
+        classpath 'net.minecraftforge.gradle:ForgeGradle:2.2-SNAPSHOT'
     }
 }
+apply plugin: 'net.minecraftforge.gradle.forge'
 
-apply plugin: 'forge'
-apply plugin: 'maven'
-
-group = "com.scottkillen.mod"
-archivesBaseName = "HerdCraft"
+/*
+// for people who want stable - not yet functional for MC 1.8.8 - we require the forgegradle 2.1 snapshot
+plugins {
+    id "net.minecraftforge.gradle.forge" version "2.0.2"
+}
+*/
+version = "L1.0"
+group= "inc.a13xis.legacy" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+archivesBaseName = "herdcraft"
 
 minecraft {
-    version = project.version_forge + "-" + project.version_mc
+    version = "1.9.4-12.17.0.1976"
     runDir = "run"
-
-    replace '${mod_version}', project.version
-}
-
-repositories {
-    mavenLocal()
-    maven { url = 'http://maven.scottkillen.com/' }
+    
+    // the mappings can be changed at any time, and must be in the following format.
+    // snapshot_YYYYMMDD   snapshot are built nightly.
+    // stable_#            stables are built at the discretion of the MCP team.
+    // Use non-default mappings at your own risk. they may not allways work.
+    // simply re-run your setup task after changing the mappings to update your workspace.
+    mappings = "snapshot_20160518"
+    // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
 }
 
 dependencies {
-    compile "com.scottkillen.mod:KoreSample:${project.ext.version_kore}:deobf"
+    // you may put jars on which you depend on in ./libs
+    // or you may define them like so..
+    //compile "some.group:artifact:version:classifier"
+    //compile "some.group:artifact:version"
+      
+    // real examples
+    //compile 'com.mod-buildcraft:buildcraft:6.0.8:dev'  // adds buildcraft to the dev env
+    //compile 'com.googlecode.efficient-java-matrix-library:ejml:0.24' // adds ejml to the dev env
+
+    // the 'provided' configuration is for optional dependencies that exist at compile-time but might not at runtime.
+    //provided 'com.mod-buildcraft:buildcraft:6.0.8:dev'
+
+    // the deobf configurations:  'deobfCompile' and 'deobfProvided' are the same as the normal compile and provided,
+    // except that these dependencies get remapped to your current MCP mappings
+    //deobfCompile 'com.mod-buildcraft:buildcraft:6.0.8:dev'
+    //deobfProvided 'com.mod-buildcraft:buildcraft:6.0.8:dev'
+
+    // for more info...
+    // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
+    // http://www.gradle.org/docs/current/userguide/dependency_management.html
+
 }
 
 processResources
 {
     // this will ensure that this task is redone when the versions change.
     inputs.property "version", project.version
-    inputs.property "version_mc", project.minecraft.version
-    inputs.property "version_forge", project.ext.version_forge
-    inputs.property "version_kore", project.ext.version_kore
+    inputs.property "mcversion", project.minecraft.version
 
-    // replace stuff in the files we want.
+    // replace stuff in mcmod.info, nothing else
     from(sourceSets.main.resources.srcDirs) {
-        include '**/*.info'
-        include '**/version.properties'
-
-        expand 'mod_version': project.version, 'minecraft_version': project.minecraft.version,
-                'forge_version': project.ext.version_forge, 'kore_version': project.ext.version_kore
+        include 'mcmod.info'
+                
+        // replace version and mcversion
+        expand 'version':project.version, 'mcversion':project.minecraft.version
     }
-
-    // copy everything else, that we didn't do before
+        
+    // copy everything else, thats not the mcmod.info
     from(sourceSets.main.resources.srcDirs) {
-        exclude '**/*.info'
-        exclude '**/version.properties'
-    }
-}
-
-jar {
-    includeEmptyDirs = false
-}
-
-task sourcesJar(type: Jar, dependsOn: classes) {
-    from(sourceSets.main.output) {
-        include '**/*.info'
-        include '**/version.properties'
-
-        expand 'mod_version': project.version, 'minecraft_version': project.minecraft.version,
-                'forge_version': project.ext.version_forge, 'kore_version': project.ext.version_kore
-    }
-
-    from(sourceSets.main.allSource) {
-        include '**/TheMod.java'
-
-        expand 'mod_version': project.version
-    }
-
-    from(sourceSets.main.allSource) {
-        exclude '**/*.info'
-        exclude '**/version.properties'
-        exclude '**/TheMod.java'
-    }
-
-    classifier = 'sources'
-}
-
-task deobfJar(type: Jar) {
-    from(sourceSets.main.output) {
-        include '**/*.info'
-        include '**/version.properties'
-
-        expand 'mod_version': project.version, 'minecraft_version': project.minecraft.version,
-                'forge_version': project.ext.version_forge, 'kore_version': project.ext.version_kore
-    }
-
-    from(sourceSets.main.output) {
-        exclude '**/*.info'
-        exclude '**/version.properties'
-    }
-
-    classifier = 'deobf'
-}
-
-artifacts {
-    archives sourcesJar
-    archives deobfJar
-}
-
-uploadArchives {
-    repositories.mavenDeployer {
-        repository (url:"file://" + projectDir + "/build/maven")
+        exclude 'mcmod.info'
     }
 }
